public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}
#top-header {
  padding-bottom: 20px;
}

#tools a {
  text-decoration: none;
  color: black;
}

.siteName a{
  text-decoration: none;
  color: black;
  font-size: 22px;
}
.navigation ul{
  justify-content: space-between;
  display: flex;
  list-style: none;
  margin: 13px;
}

.navigation {
  background-color: rgb(5, 5, 56);
  padding: 1px;
}



.navigation a {
    padding: .85rem 10px;
    color: white;
    background-color: rgb(5, 5, 56);
    text-decoration: none;
}

.deloreanCard{
  width: 170px;
  font-size: 12px;
  padding: 10px;
  color: rgb(54, 138, 235);
  float: left;
  position: absolute;
  top: 180px;
  background-color: rgba(232, 232, 244, 0.799);
}

.deloreanCard h2 {
  margin: 0;
  padding-left: 15px;
}

.deloreanCard img {
  padding: 15px;
}
#delorean-ad ul {
  list-style: none;
  margin: 0;
  padding-left: 15px;
}

#upgrades li{
  display: flex;
}

#tools {
  float: right;
}

#wrapper {
  border: none;
}

.hero img {
  width: 100%;
  height: 100%;
}

.carInfo {
  
  display: flex;
  flex-direction: column;
 }

#upgrades {
  align-items: center;
  order:2
}
#upgrades div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  gap: 10px;
}
#upgrades div div{
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  width: 180px;
  background-color: rgb(54, 138, 235);
}

#reviews {
  order:1
}
#reviews p{
  font-size: 20px;
}

